吃什么项目基础文件调整

--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0" />
 <meta name="apple-touch-fullscreen" content="YES" />
- <title>到哪吃？</title>
+ <title>吃哪儿？</title>
+
     <link href="css/basic.css" rel="stylesheet" />
     <script src="jqueryLB/jquery.tools.1.27.min.js"></script>
+    <script src="jqueryPlugin/layer/layer.min.js"></script>
     <script src="js/index.js"></script>
 </head>
 <body>
-    <div>吃什么？</div>
+    <div class="pageAll">
+        <div class="contentTitle">吃哪儿？</div>
+
+        <div class="contentImg"></div>
+
+        <div class="contentSel">
+            <div class="btn_userAuto">锦囊妙计</div>
+            <div class="btn_userAuto">听天由命</div>
+        </div>
+
+    </div>
+    
 </body>
 </html>
