首页的一些调整

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
  <title>吃哪儿？</title>
 
     <link href="css/basic.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
+
     <script src="jqueryLB/jquery.tools.1.27.min.js"></script>
     <script src="jqueryPlugin/layer/layer.min.js"></script>
     <script src="js/index.js"></script>
 </head>
 <body>
-    <div class="pageAll">
-        <div class="contentTitle">吃哪儿？</div>
+     <div class="pageLayer "><img src="images/logo_eatwhat.png" /></div>
+    <div class="pageAll Hidden">
+        <div class="contentTitle"><img src="images/logo_eatwhat.png" /></div>
 
         <div class="contentImg"></div>
 
