--- a/index.html
+++ b/index.html
@@ -4,28 +4,64 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0" />
 <meta name="apple-touch-fullscreen" content="YES" />
+
  <title>吃哪儿？</title>
 
     <link href="css/basic.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
 
-    <script src="jqueryLB/jquery.tools.1.27.min.js"></script>
-    <script src="jqueryPlugin/layer/layer.min.js"></script>
-    <script src="js/index.js"></script>
+    <link href="jqueryPlugin/jquery.mobile/css/jquery.mobile-1.3.1.min.css" rel="stylesheet"
+        type="text/css" />
+
+    <script src="jqueryLB/jquery.tools.1.27.min.js" type="text/javascript"></script>
+    <script src="jqueryPlugin/layer/layer.min.js" type="text/javascript"></script>
+
+    <script src="jqueryPlugin/jquery.mobile/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
+    <script src="js/index.js" type="text/javascript"></script>
 </head>
 <body>
-     <div class="pageLayer "><img src="images/logo_eatwhat.png" /></div>
-    <div class="pageAll Hidden">
-        <div class="contentTitle"><img src="images/logo_eatwhat.png" /></div>
+<div data-role="page" id="page">
+    <div class="pageLayer"><img style="height:59px;" src="images/logo_eatwhat.png" /></div>
 
-        <div class="contentImg"></div>
+    <div class="pageAll Hidden mTop15">
+        <div class="contentTitle"><img style="height:59px;" src="images/logo_eatwhat.png" /></div>
 
-        <div class="contentSel">
-            <div class="btn_userAuto">锦囊妙计</div>
-            <div class="btn_userAuto">听天由命</div>
+        <div class="contentImg"><img style="height:192px;" src="images/ico_content.png" /></div>
+
+        <div class="contentSel mTop35">
+            <div class="btn_userAuto" ><a href="#userAuto" data-transition="slide"><img  class="pageBtnSize" src="images/btn_goodIdea.png" /></a></div>
+            <div class="btn_userAuto" ><a href="#userListenGog" data-transition="slide"><img  class="pageBtnSize" src="images/btn_listenGod.png" /></a></div>
         </div>
 
     </div>
+ </div>
     
+    <div id="userAuto" data-role="page">
+        <div class="returnPage Left"><a data-rel="back" data-role="none"><span><</span>返回</a></div>
+
+        <div class=" Right mRight15 pTop10">
+            <div class="Left"><img style="width:25px;height:31px;" src="images/ico_useCount.png" /></div>
+            <div class="Left LineHeight30 mLeft5 useCount"><span id="userChangeCount">0</span><span>/</span><span>3</span></div>
+            <div class="Clear"></div>
+        </div>
+        <div class=" Clear"></div>
+
+        <div class=" TxtCenter">
+            <img style="height:175px;" src="images/ico_zhuge.png" />
+        </div>
+
+        <div class="dialogContent mTop15">每日三计锦囊。根据你每次选择，军师会逐步掌握你的喜好，为你出谋划策，彻底解决吃饭难题。</div>
+
+        <div class="btn_userAuto mTop20"><img  class="pageBtnSize" id="btn_userAuto" src="images/btn_askZhuGe.png" /></div>
+    </div>
+
+    <div id="userListenGog" data-role="page">
+        <div class="returnPage"><a data-rel="back" data-role="none"><span><</span>返回</a></div>
+        <div class=" TxtCenter">
+            <img style=" width:130px;height:184px;" src="images/ico_miaoji.png" />
+        </div>
+        <div class="dialogContent">缘分天注定，连吃饭也逃不过，看看今天和哪儿有缘吧！</div>
+        <div class="btn_userAuto mTop25"><img class="pageBtnSize" id="btn_userListenGog" src="images/btn_godKnow.png" /></div>
+    </div>
 </body>
 </html>
