--- a/map.html
+++ b/map.html
@@ -12,20 +12,20 @@
     </style>
 
     <script type="text/javascript">
-        $(function () {
-            $.get("ajaxpage/ajax.aspx", { option: "GetPointer" }, function (data) {
-                if (data) {
-                    var result = data.result;
-                    result = eval("(" + result + ")");
+        //$(function () {
+        //    $.get("ajaxpage/ajax.aspx", { option: "GetPointer" }, function (data) {
+        //        if (data) {
+        //            var result = data.result;
+        //            result = eval("(" + result + ")");
 
-                    /** 百度地图API功能 **/
-                    var map = new BMap.Map("map");            // 创建Map实例
-                    var point = new BMap.Point(result.content.point.x, result.content.point.y); // 创建点坐标
-                    map.centerAndZoom(point, 15);                 // 初始化地图,设置中心点坐标和地图级别。
-                    map.enableScrollWheelZoom();                 //启用滚轮放大缩小
-                }
-            });
-        });
+        //            /** 百度地图API功能 **/
+        //            var map = new BMap.Map("map");            // 创建Map实例
+        //            var point = new BMap.Point(result.content.point.x, result.content.point.y); // 创建点坐标
+        //            map.centerAndZoom(point, 15);                 // 初始化地图,设置中心点坐标和地图级别。
+        //            map.enableScrollWheelZoom();                 //启用滚轮放大缩小
+        //        }
+        //    });
+        //});
 
     </script>
    
@@ -35,10 +35,12 @@
 </body>
 </html>
 
-<!--<script type="text/javascript">
+<script type="text/javascript">
     /** 百度地图API功能 **/
+    var address = "杨浦区淞沪路77号万达广场B1楼城中城B-18号商铺";
     var map = new BMap.Map("map");            // 创建Map实例
-    var point = new BMap.Point(121.508449, 31.3096708); // 创建点坐标
-    map.centerAndZoom(point, 15);                 // 初始化地图,设置中心点坐标和地图级别。
-    map.enableScrollWheelZoom();                 //启用滚轮放大缩小
-</script>-->
+    map.centerAndZoom(new BMap.Point(121.508449, 31.3096708), 11);
+    var driving = new BMap.DrivingRoute(map, { renderOptions: { map: map, autoViewport: true } });
+    driving.search("上海市 杨浦区 淞沪路388号 (近政立路) 创智天地7号楼1层多功能厅", address);
+    
+</script>
