--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 
  <title>吃哪儿？</title>
 
-    <link href="css/basic.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet" />
-    <link href="jqueryPlugin/jquery.mobile/css/jquery.mobile-1.3.1.min.css" rel="stylesheet"  type="text/css" />
+<link href="css/basic.css" rel="stylesheet" />
+<link href="css/index.css" rel="stylesheet" />
+<link href="jqueryPlugin/jquery.mobile/css/jquery.mobile-1.3.1.min.css" rel="stylesheet"  type="text/css" />
 
-    <script src="jqueryLB/jquery.tools.1.27.min.js" type="text/javascript"></script>
-    <script src="jqueryPlugin/layer/layer.min.js" type="text/javascript"></script>
-    <script src="jqueryPlugin/jquery.mobile/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
+<script src="jqueryLB/jquery.tools.1.27.min.js" type="text/javascript"></script>
+<script src="jqueryPlugin/layer/layer.min.js" type="text/javascript"></script>
+<script src="jqueryPlugin/jquery.mobile/jquery.mobile-1.3.1.min.js" type="text/javascript"></script>
  
-    <script src="js/index.js" type="text/javascript"></script>
+<script src="js/index.js" type="text/javascript"></script>
 </head>
 <body>
+
 <div data-role="page" id="page">
     <div class="pageLayer"><img style="height:59px;" src="images/logo_eatwhat.png" /></div>
 
@@ -63,12 +64,12 @@
 </div>
 
 <div id="map" data-role="page">
-    <div class="returnPage Left"><a data-rel="back" data-role="none"><span><</span>返回</a></div>
+    <div class="returnPage"><a data-rel="back" data-role="none"><span><</span>返回</a></div>
     <div id="allmap" class="TxtCenter"><img src="images/ico_demoMap.png" /></div>
 </div>
+
 <input type="hidden" id="txt_shopName"/>
 <input type="hidden" id="txt_shopLogo"/>
 <input type="hidden" id="txt_shopAddress"/>
 </body>
 </html>
-<!--<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=9RKI1PXKnCGGGeZwo32wl4Ws"></script>-->
